[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "youdownload"
version = "1.0.0"
description = "YouDownload - A Python application for downloading content"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "jrbsantos", email = "jrbsantos@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/jrbsantos/youdownload"
Repository = "https://github.com/jrbsantos/youdownload"
"Bug Tracker" = "https://github.com/jrbsantos/youdownload/issues"